fixing IE layout issues
holy shit, that took a long time. learning? AUTO COLUMNS.

--- a/css/base.css
+++ b/css/base.css
@@ -23,6 +23,7 @@ header {
 }
 img.header {
   padding-top: 5px;
+  border: 0;
 }
 header a.home-link, header a.home-link:visited {
     margin-right:80px;
